--- a/src/common/components/ClassificationIcon/ClassificationIcon.scss
+++ b/src/common/components/ClassificationIcon/ClassificationIcon.scss
@@ -1,3 +1,4 @@
+@import "../../style/varibles";
 .classification-icon {
   width: 100px;
   height: 100px;
@@ -9,7 +10,7 @@
     height: 80px;
     width: 100px;
     margin-bottom: 0px;
-    box-shadow: 0px 4px 16px grey;
+    box-shadow: 0px 4px 16px $gray-300;
   }
   .text {
     font-size: 28px;
