搜索详情页的描述部分,有点难搞噢, 这个text-overflow

--- a/src/pages/test/test.scss
+++ b/src/pages/test/test.scss
@@ -1,7 +1,10 @@
-.dd {
-  display: flex;
-  height: 750px;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
+@import "../../common/style/custom";
+
+.box {
+  position: relative;
+}
+.icon {
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
