--- a/src/common/style/custom.scss
+++ b/src/common/style/custom.scss
@@ -8,4 +8,14 @@
     border: none;
   }
 }
+.page {
+  padding: 0 20px;
+}
 // 颜色表在此 http://xh.5156edu.com/page/z1015m9220j18754.html
+.ellipsis{
+  overflow : hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
