基本完成评论页, 详情页也差不多, 也没个后端不想写了

--- a/src/pages/bookDetail/components/BookDetailItem/BookDetailItem.scss
+++ b/src/pages/bookDetail/components/BookDetailItem/BookDetailItem.scss
@@ -158,7 +158,13 @@
     margin-left: auto;
   }
   &-scroll {
-
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    margin-top: 25px;
   }
 }
-
+.promote-item {
+  padding: 0 20px;
+}
