--- a/src/common/components/PromotionProductItem/PromotionProductItem.scss
+++ b/src/common/components/PromotionProductItem/PromotionProductItem.scss
@@ -3,18 +3,20 @@
 .container {
   display: inline-flex;
   width: 220px;
+  flex-direction: column;
   .img {
     width: 100%;
-    height: 300px;
+    height: 150px;
   }
   .title {
     font-size: $font-size-sm;
     @extend .ellipsis;
+    white-space: normal;
   }
   .price {
-    margin-top: 60px;
+    margin-top: 20px;
     color: #000;
-    font-size: $font-size-lg;
+    text-align: center;
     font-weight: $font-weight-bold;
   }
 }
