--- a/src/common/components/SearchBar/SearchBar.scss
+++ b/src/common/components/SearchBar/SearchBar.scss
@@ -17,6 +17,8 @@
   .search-input {
     flex-grow: 1;
     padding-left: 10px;
+    font-size: 28px;
+    font-weight: 300;
     /* border-left: 1px solid #DCDCDC; */
   }
 }
