--- a/src/common/components/SortTab/SortTab.scss
+++ b/src/common/components/SortTab/SortTab.scss
@@ -6,6 +6,9 @@
   justify-content: space-around;
   border-top: 2px solid $gray-400;
   border-bottom: 2px solid $gray-400;
+  button {
+    font-size: 28px;
+  }
 }
 .active {
   color: red;
