--- a/src/common/style/custom.scss
+++ b/src/common/style/custom.scss
@@ -4,6 +4,9 @@
 
 .transparent-button {
   background: none;
+  padding: 0;
+  font-weight: 400;
+  font-size: 28px;
   &:after {
     border: none;
   }
@@ -30,4 +33,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.common-text {
+  font-size: 24px;
+  font-weight: 400;
+}
+.common-title {
+  font-size: 28px;
+  font-weight: bold;
 }
