completed shopping cart design, need fix context problem

--- a/src/pages/browsingHistory/browsingHistory.scss
+++ b/src/pages/browsingHistory/browsingHistory.scss
@@ -24,6 +24,7 @@
         @extend .van-multi-ellipsis--l2;
         -webkit-line-clamp: 3;
         font-size: $font-size-sm;
+        min-height: 57px;
       }
       .bottom {
         margin-top: 10px;
