--- a/src/pages/bookDetail/bookDetail.scss
+++ b/src/pages/bookDetail/bookDetail.scss
@@ -32,7 +32,12 @@
       width: 40%;
       display: flex;
       justify-content: space-around;
+      .favorited {
+        color: hsla(57, 70%, 51%, 0.74);
+      }
+      .notFavorited {
 
+      }
     }
     .buys {
       display: flex;
